K8S/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: beershop
  annotations:
  creationTimestamp: null
  labels:
    beershop.service: mongodb
  name: mongodb
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongodb
    spec:
      containers:
      - image: mongo
        name: mongodb
        ports:
        - containerPort: 27017
        resources: {}
      restartPolicy: Always
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-data
status: {}
