K8S/beer-service-external.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mongoapi-env
  creationTimestamp: null
  labels:
    service: beer-service-beershop
  name: beer-service
spec:
  type: ExternalName
  externalName: mongodb.beershop.svc.cluster.local
  ports:
  - port: 80
