K8S/beer-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: beershop
  annotations:
  creationTimestamp: null
  labels:
    service: beer-service
  name: beer-service
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: beer-service
status:
  loadBalancer: {}
