K8S/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: beershop
  creationTimestamp: null
  labels:
    service: keycloak
  name: keycloak
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
status:
  loadBalancer: {}
