K8S/mongodb-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: beershop
  creationTimestamp: null
  labels:
    service: mongodb-mongoapi-env
  name: mongodb
spec:
  type: ExternalName
  externalName: beer-service.mongoapi-env.svc.cluster.local
  ports:
  - port: 27017
