K8S/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: beershop
  annotations:
  creationTimestamp: null
  labels:
    service: mongodb-service
  name: mongodb
spec:
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: mongodb
status:
  loadBalancer: {}
