K8S/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: beershop
  creationTimestamp: null
  labels:
    service: rabbitmq
  name: rabbitmq
spec:
  ports:
  - name: "15672"
    port: 15672
    targetPort: 15672
  - name: "5672"
    port: 5672
    targetPort: 5672
  selector:
    app: rabbitmq
status:
  loadBalancer: {}
