K8S/stock-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: beershop
  creationTimestamp: null
  labels:
    service: stock-service
  name: stock-service
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: stock-service
status:
  loadBalancer: {}
