K8S/keaycloak-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: keacloak-ingress
  namespace: beershop
  creationTimestamp: null
spec:
  rules:
    - host: k8s.keycloak.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
