K8S/kube-state-metrics-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kube-state-metrics-ingress
  namespace: kube-system
  creationTimestamp: null
spec:
  rules:
    - host: k8s.metrics.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-state-metrics
                port:
                  number: 8080
