K8S/stock-service-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: stock-service-ingress
  namespace: beershop
  creationTimestamp: null
spec:
  rules:
    - host: k8s.stock-service.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stock-service
                port:
                  number: 80
